fixed map size on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -176,6 +176,7 @@ section .buttons a:hover {
         padding: 0.4rem 0.8rem;
     }
     section div#right-card {
-        width: clamp(3.5rem, 80vw, 45rem);
+        height: clamp(3.5rem, 90vw, 40rem);
+        width: clamp(3.5rem, 90vw, 45rem);
     }
 }
